# Algortihms-and-AI-Lab

./: Implementation_Documentation.md  README.md  Specification_Document.md  Testing_Documentation.md
NN_project/: equations_explained.markdown  pyproject.toml  trained_model.pkl
NN_project/src/: architecture.py  equations_explained.markdown  mnist_loader.py  results.ipynb  train_model.py
NN_project/src/tests/: architecture.py  mnist_loader.py  network_test.py
NN_project/tests/: network_test.py
weekly_reports/: week_1.md  week_2.md  week_3.md  week_4.md  week_5  week_6.md
