[project]
name = "algorithms-and-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Rishika Shivakumar",email = "rishika.shivakumar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "coverage (>=7.11.3,<8.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)"
]
